--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "^14.1.0",
+    "next-auth": "^4.24.13",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "^14.1.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
