--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.3",
     "next": "^14.1.0",
     "next-auth": "^4.24.13",
     "react": "^18.2.0",
